header or nav section complete with responsive done

--- a/styles/style.css
+++ b/styles/style.css
@@ -28,11 +28,87 @@ body{
 
 
 
-
-
-
-
-
-
-
 /* reset code and common code End here */
+
+
+/* header start here */
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    color: #fff;
+    padding: 2rem 1rem;
+
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    min-height: 5vh;
+
+}
+
+.logo-figure{
+    border: 1px solid #fff;
+}
+.logo{
+    font-size: 4rem;
+}
+
+nav li{
+    display: inline-block;
+    margin-right: 2rem;
+    padding: 1rem;
+    transition: all 0.4s;
+}
+nav li:last-child{
+    margin-right: 0;
+}
+nav li:hover{
+    background-color: #1913d5;
+    border-radius: 0.6rem;
+}
+.nav-link{
+    font-size: 1.8rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* header ends here */
+
+
+/* responsive start here */
+@media (max-width: 992px){
+
+}
+
+@media (max-width: 768px){
+    
+}
+
+@media (max-width: 600px){
+   /* header/nav start responsive  */
+    html{
+        font-size: 48.5%;
+    }
+    header{
+        flex-direction: column;
+
+    }
+    nav ul{
+        padding-left: 2.5rem;
+    }
+    
+    nav li{
+        display: block;
+        margin-right: 0;
+        margin: 1rem 0;
+    }
+    /* header/nav end responsive  */
+    
+}
+
+@media (max-width: 400px){
+    
+}
+
+/* responsive start here */
