--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,10 @@ body{
     box-shadow: 0.1rem 0.1rem 0.1rem #c4c4c4 , -0.1rem 0rem 0.1rem #c4c4c4;
 }
 
+.text-justify{
+    text-align: justify;
+}
+
 
 
 /* reset code and common code End here */
@@ -76,12 +80,71 @@ nav li:hover{
 /* header ends here */
 
 
+
+
+/* banner start here */
+#blog-banner-section{
+    padding: 5rem 1rem;
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    min-height: 95vh;
+}
+#blog-banner-section article{
+    flex-basis: 50%;
+    margin: 1rem;
+}
+.banner-heading{
+    display: inline-block;
+    padding: 1rem;
+    font-size: 4rem;
+    margin-bottom: 1.5rem;
+    background-color: black;
+    color: #fff;
+}
+
+.banner-description{
+    font-size: 1.8rem;
+    
+}
+
+#blog-banner-section aside{
+    flex-basis: 50%;
+    text-align: center;
+
+}
+
+.banner-img{
+    width: 55rem;
+    height: 55rem;
+    border: 0.3rem solid;
+}
+
+/* banner ends here */
+
+
 /* responsive start here */
 @media (max-width: 992px){
+    #blog-banner-section{
+        flex-direction: column;
+    }
+    #blog-banner-section article{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 5rem;
+    }
 
 }
 
 @media (max-width: 768px){
+    html{
+        font-size: 55.5%;
+    }
+    #blog-banner-section article{
+        width: 80%;
+    }
     
 }
 
@@ -104,6 +167,14 @@ nav li:hover{
         margin: 1rem 0;
     }
     /* header/nav end responsive  */
+
+    #blog-banner-section {
+        min-height: auto;
+    }
+
+    #blog-banner-section article{
+        width: 95% ;
+    }
     
 }
 
@@ -111,4 +182,6 @@ nav li:hover{
     
 }
 
-/* responsive start here */
+/* responsive ends here */
+
+
