--- a/styles/style.css
+++ b/styles/style.css
@@ -38,10 +38,13 @@ body{
 }
 
 .section-center{
+    padding: 5rem 1rem;
+    min-height: 95vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+
 }
 
 .btn{
@@ -198,6 +201,106 @@ nav li:hover{
 }
 /* about section ends here */
 
+/* archives section start here */
+#archives{
+    padding : 5rem ;
+    min-height: 95vh;
+}
+
+.archives-container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem;
+    border-top: 0.1rem solid ;
+    border-bottom: 0.1rem solid ;
+}
+
+.archives-container-lists{
+    display: flex;
+    text-align: center;
+}
+
+.archives-container-list{
+    margin: 2rem;
+
+}
+
+.archives-img{
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.6rem;
+    transition: transform 0.4s;
+}
+
+.archives-img:hover{
+    transform: scale(1.1);
+}
+
+/* archives section ends here */
+
+
+/* blog post start here */
+.blog-post-heading{
+    margin-bottom: 5rem;
+}
+.blog-post{
+    width: 70%;
+    display: flex;
+    margin: 1rem 0;
+    box-shadow: 0.1rem 0.1rem 0.1rem #222 , -0.1rem 0 0.1rem #222;
+    transition: transform 0.4s;
+}
+
+.blog-img{
+    width: 100%;
+    height: 100%;
+}
+.blog-post:hover{
+    transform: scale(1.1);
+}
+.blog-post-aside{
+    flex: 1;
+}
+.blog-content{
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 1rem ;
+    margin-left:2rem;
+}
+.blog-heading{
+    font-size: 2.5rem ;
+    margin-bottom: 1rem;
+
+}
+.blog-sub-heading{
+    font-size: 2rem ;
+    margin-bottom: 1rem;
+}
+.blog-description{
+    font-size: 1.6rem;
+    text-align: justify;
+    margin-bottom:1rem;
+   
+}
+
+.blog-btn{
+    width: 30%;
+
+}
+/* blog post end here */
+
+/* contact section start here */
+
+/* contact section end here */
+
+
+
+
+
 
 /* responsive start here */
 @media (max-width: 992px){
@@ -233,6 +336,15 @@ nav li:hover{
     .card-container{
         width: 80%;
       
+    }
+    #archives{
+        min-height: auto;
+
+    }
+    .blog-post{
+        flex-direction: column;
+        margin-bottom: 3rem;
+        width: 80%;
     }
     
 }
@@ -277,6 +389,14 @@ nav li:hover{
     .card-container{
         width: 90%;
 
+    }
+    .archives-container-lists{
+        flex-wrap: wrap;
+    }
+    .blog-post{
+        flex-direction: column;
+        margin-bottom: 3rem;
+        width: 90%;
     }
     
 }
